# BitTorrent_Client

./: .gitignore  CMakeLists.txt  Makefile  README.md  Torrent Client Qt  oldMakefile
.github/workflows/: main.yaml
Qt/: Window.cpp  Window.hpp  main_Qt.cpp  resources.qrc
incs/: Block.hpp  Message.hpp  PeerConnection.hpp  PeerRetriever.hpp  PeersQueue.hpp  Piece.hpp  PieceManager.hpp  SharedQueue.hpp  TorrentClient.hpp  TorrentFileParser.hpp  connection.hpp  utils.hpp
srcs/: Message.cpp  PeerConnection.cpp  PeerRetriever.cpp  PeersQueue.cpp  Piece.cpp  PieceManager.cpp  TorrentClient.cpp  TorrentFileParser.cpp  connection.cpp  main.cpp  utils.cpp
terminal_main/: main.cpp
terminal_objs/: main.d
